[tool.poetry]
name = "streamlit-pyes"
version = "0.1.0"
description = ""
authors = ["Lorenzo Castellino <castellino96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "^1.35.0"
pandas = "^2.2.2"
libeq = {git = "https://github.com/Kastakin/libeq.git"}


[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
